@startuml Entity

package typeorm {
  class "@Entity" as Entity
  hide Entity circle
  class "@Column" as Column
  hide Column circle
  class "@PrimaryColumn" as PrimaryColumn
  hide PrimaryColumn circle
  class "@OneToMany" as OneToMany
  hide OneToMany circle
  class "@JoinColumn" as JoinColumn
  hide JoinColumn circle
  class "@ManyToOne" as ManyToOne
  hide ManyToOne circle
  class "@CreateDateColumn" as CreateDateColumn
  hide CreateDateColumn circle
  class "@UpdateDateColumn" as UpdateDateColumn
  hide UpdateDateColumn circle
}

package film.entity {
    class "type StreamingAnbieter = 'NETFLIX' | 'AMAZON' | 'PARAMOUNT' | 'DISNEY'" as StreamingAnbieter
    hide StreamingAnbieter circle

    class Film <<entity>> <<@Entity>> {
        @Column() @PrimaryColumn() readonly id: number
        @Column() readonly version: number
        @Column() readonly titel: string
        @Column() readonly bewertung?: number
        @Column() readonly preis!: number
        @Column() readonly rabatt?: number
        @Column() readonly veroeffentlichungsdatum: Date
        @Column() readonly imdbEintrag?: string
        @Column() readonly :genres? string
        @Column() readonly anbieter?: StreamingAnbieter
        @CreateDateColumn() readonly erzeugt: Date
        @UpdateDateColumn() readonly aktualisiert: Date
    }

    class Produktionstudio <<entity>> <<@Entity>> {
        @Column() @PrimaryColumn() readonly id: number
        @Column() readonly name!: string
    }

    class Produzent <<entity>> <<@Entity>> {
        @Column() @PrimaryColumn() readonly id: number
        @Column readonly vorname!: string
        @Column readonly nachname!: string
    }

    Film *--> "1" Produktionstudio : @OneToOne() \nproduktionsstudio
    Film *--> "*" Produzent : @OneToMany() \nproduzent

    Film .right.> Entity
    Film .right.> StreamingAnbieter
}

hide empty members

footer (c) Adrian Spindler

@enduml 
